# Kady-OpalEngine

./: .gitignore  Cargo.toml  Cross.toml  build_cross  config.toml  requests.toml
api/: Cargo.toml  notes.txt
api/src/: lib.rs  public_dispatcher.rs  root.rs
api/views/private/: README.md  package.json  tsconfig.app.json
api/views/private/src/: App.vue
api/views/private/src/assets/: main.css  main.css.map  main.less
api/views/private/src/assets/scripts/: lib.ts
api/views/private/src/components/: ConnectionComponent.vue  NavigationDock.vue
api/views/private/src/router/: index.ts
api/views/private/src/views/: RootView.vue
api/views/public/: README.md  index.html  package.json
api/views/public/src/: App.vue
api/views/public/src/assets/css/: base.css  base.css.map  base.less  footer.css  footer.css.map  footer.less  main.css  main.css.map  main.less  navbar.css  navbar.css.map  navbar.less
api/views/public/src/components/: FooterItem.vue  WelcomeMain.vue
api/views/public/src/components/home/: FeatureItem.vue  FeatureView.vue  LangSelector.vue  newsBox.vue
api/views/public/src/components/navbar/: CategoryItem.vue  NavbarComponent.vue
api/views/public/src/views/: HomeView.vue
app/: Cargo.toml
app/src/: application_commands_manager.rs  constants.rs  database_cleaner.rs  main.rs  tasks.rs
app/src/assets/: help.rs  mod.rs  profanity.rs
app/src/crates/: cookies.rs  error_broadcaster.rs  mod.rs  status.rs
app/src/events/: message_create.rs  message_delete.rs  mod.rs
app/src/scripts/: mod.rs
app/src/scripts/buttons/: captcha_request.rs  captcha_try.rs  cookies.rs  kady.rs  mod.rs
app/src/scripts/modal/: cookie_quiz_answer.rs  kady.rs  mod.rs
app/src/scripts/select_menu/: mod.rs  select_help_category.rs
app/src/scripts/slashs/: admin.rs  citation.rs  common.rs  cookies.rs  fun.rs  mod.rs  top.rs  xp.rs
archive/: Cargo.toml
archive/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs  ui.rs
client/: Cargo.toml
client/src/: constants.rs  lib.rs  typemap.rs
client/src/manager/: cache.rs  events.rs  http.rs  mod.rs  shard.rs
client/src/models/: channel.rs  events.rs  guild.rs  interaction.rs  message.rs  mod.rs  presence.rs  user.rs
client/src/models/components/: embed.rs  message_components.rs  mod.rs  sticker.rs
client/src/utils/: mod.rs
config/: Cargo.toml  config.toml  log4rs.yaml
config/src/: lib.rs
core/: Cargo.toml
core/src/: application_commands_manager.rs  constants.rs  interaction_constructor.rs  main.rs  tasks.rs
core/src/assets/: profanity.rs
core/src/crates/: cookies.rs  error_broadcaster.rs  mod.rs  status.rs
core/src/events/: guild_add_remove.rs  guild_member_add.rs  message_create.rs  message_delete.rs  mod.rs
core/src/scripts/: mod.rs
core/src/scripts/buttons/: captcha_request.rs  captcha_try.rs  cookies.rs  mod.rs
core/src/scripts/modal/: cookie_quiz_answer.rs  mod.rs
core/src/scripts/slashs/: admin.rs  citation.rs  common.rs  cookies.rs  fun.rs  mod.rs  ping.rs  top.rs  xp.rs
database/: Cargo.toml
database/assets/: cookies_quiz.sql  guild_get.sql  system.sql  user.sql
database/src/: dynamic_requests.rs  lib.rs
database/src/model/: guild.rs  mod.rs  users.rs
error/: Cargo.toml
error/src/: lib.rs
features/: Cargo.toml
features/src/: lib.rs  utils.rs  xp.rs
features/src/captcha/generator/filters/: noise.rs  wave.rs
features/src/captcha/generator/fonts/: mod.rs
features/src/coolors/: main.rs  mod.rs  picture.rs  utils.rs
langs/en/: declaration.json
langs/fr/: commands.json  constants.json  declaration.json  engagement.json  errors.json  slashs.json
langs/fr/features/: captcha.json  citation.json  cookies.json  ghostping.json  xp.json
langs/fr/system/: admin.json
modules/archive/src/: lib.rs
modules/config/: Cargo.toml
modules/config/src/: lib.rs
modules/database/: Cargo.toml
modules/database/assets/: cookies_quiz.sql  guild.sql  system.sql  user.sql
modules/database/src/: constants.rs  dynamic_requests.rs  lib.rs
modules/database/src/model/: guild.rs  users.rs
modules/features/: Cargo.toml
modules/features/src/: auto_role.rs  ghostping.rs  lib.rs  utils.rs
modules/features/src/captcha/: mod.rs
modules/features/src/captcha/generator/: mod.rs
modules/features/src/captcha/generator/filters/: cow.rs  dots.rs  grid.rs  mod.rs
modules/features/src/captcha/generator/images/: mod.rs
modules/features/src/captcha/generator/samples/: mod.rs
modules/features/src/coolors/: colors.rs  mod.rs
modules/translation/: Cargo.toml
modules/translation/src/: fmt.rs  lib.rs  parser.rs
tasks/: get_cpu  get_ressources  get_ressources_watch  get_rss  get_threads
translation/src/: lib.rs  macros.rs
