[workspace]
members = [
    # The main process
    "app",
    # Discord client
    "client",
    # Configuration manager
    "modules/config",
    # The error handler
    "modules/error",
    # Archive manager
    "modules/archive",
    # The translator
    "modules/translation",
    # The database
    "modules/database",
    # The feature manager
    "modules/features",
    # The API
    "api"
]
resolver = "2"

[workspace.dependencies]
sqlx = "0.7.1"
serde = "1.0.188"
serde_json = "1.0.107"
chrono = "0.4.26"
log = "0.4.19"
tokio = "1.29.1"
reqwest = "0.11.18"
rand = "0.8.5"
regex = "1.9.1"
uuid = "1.4.1"
lazy_static = "1.4.0"