[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
log = { workspace = true }

[dependencies.axum]
version = "0.6.19"
features = ["tokio", "macros", "default", "json", "tower-log"]

[dependencies.client]
path = "../client"

[dependencies.database]
path = "../database"