[package]
name = "core"
version = "0.1.89"
edition = "2021"
authors = ["Sedorikku"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# More information will be logged
debug = []
# Report memory use every hour for the cache
memory-report = []

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
lazy_static = "1.4.0"
regex = { workspace = true }
chrono = { workspace = true }
hex-literal = "0.4.1"
clap = { version = "4.3.19", features = ["default", "derive"]}
strsim = "0.10.0"
openssl = { version = "0.10.55", features = ["vendored"] }

[dependencies.log4rs]
version = "1.2.0"
features = ["all_components"]

[dependencies.sqlx]
workspace = true
features = ["macros", "mysql", "default", "runtime-tokio-native-tls", "chrono"]

[dependencies.reqwest]
workspace = true
features = ["json", "serde_json", "native-tls", "multipart"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[dependencies.sha2]
version = "0.10.7"
features = ["std"]

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.signal-hook]
version = "0.3.15"
features = ["iterator"]

[dependencies.uuid]
workspace = true
features = ["v4", "v1", "v3", "serde"]

[dependencies.rand]
workspace = true
features = ["default", "alloc"]




[dependencies.client]
path = "../client"
features = ["debug"]

[dependencies.error]
path = "../modules/error"
features = ["debug"]

[dependencies.config]
path = "../modules/config"
features = ["debug"]

[dependencies.archive]
path = "../modules/archive"
features = ["debug"]

[dependencies.translation]
path = "../modules/translation"
features = ["debug"]

[dependencies.database]
path = "../modules/database"
features = ["debug"]

[dependencies.features]
path = "../modules/features"
features = ["debug"]

[dependencies.api]
path = "../api"
