[package]
name = "archive"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
# More informations will be logged
debug = []
total_access = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.7.4"
serde_yaml = "0.9.21"

[dependencies.chrono]
workspace = true
features = ["serde", "default"]

[dependencies.error]
path = "../error"