[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tui-textarea = { version = "0.2.0", features = ["default", "crossterm"] }
serde_json = { workspace = true }

[dependencies.tui]
version = "0.19.0"
features = ["crossterm", "default"]
# https://docs.rs/tui/0.19.0/tui/

[dependencies.archive]
path = "../archive"
features = ["total_access"]

[dependencies.config]
path = "../config"