[package]
name = "error"
version = "0.1.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
log = "0.4.18"
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive", "default", "serde_derive"]

[features]
# More informations will be logged
debug = []