[package]
name = "features"
version = "0.1.29"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
serde_json = { workspace = true }
base64 = "0.21.2"
lodepng = "3.7.2"
log = { workspace = true }
lazy_static = "1.4.0"
rusttype = "0.9.3"
structopt = "0.3"
indicatif = "0.17.6"
itertools = "0.11.0"


[dependencies.imageproc]
version = "0.23.0"
features = ["default"]

[dependencies.serde]
workspace = true
features = ["derive", "default", "serde_derive"]

[dependencies.sqlx]
workspace = true
features = ["macros", "mysql", "default", "runtime-tokio-native-tls", "chrono"]

[dependencies.reqwest]
workspace = true
features = ["json", "serde_json", "native-tls", "multipart"]

[dependencies.regex]
workspace = true
features = ["std", "perf-inline", "perf", "unicode"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png"]

[dependencies.rand]
workspace = true
features = ["default", "alloc"]

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.uuid]
workspace = true
features = ["v4", "v1", "v3"]

[dependencies.error]
path = "../error"

[dependencies.database]
path = "../database"

[dependencies.client]
path = "../client"

[dependencies.translation]
path = "../translation"