[package]
name = "config"
version = "0.1.6"
edition = "2021"
authors = ["Sedorikku"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
# More informations will be logged
debug = []

[dependencies]
toml = "0.7.4"
error = { path = "../error" }
client = { path = "../../client" }

[dependencies.serde]
workspace = true
features = ["derive", "default", "serde_derive"]