[package]
name = "translation"
version = "0.1.75"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
lazy_static = "1.4.0"
logs = "0.7.1"
serde = "1.0.163"
serde_json = "1.0.96"
regex = "1.8.3"

[dependencies.error]
path = "../error"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]
